photos/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photos
  labels:
    app: photos
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photos
  template:
    metadata:
      name: photos-pod
      labels:
        app: photos
    spec:
      containers:
        - name: photos-container
          image: photoprism/photoprism
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - name: photos-storage-originals
              mountPath: /photoprism/originals
            - name: photos-storage-import
              mountPath: /photoprism/import
            - name: photos-storage-storage
              mountPath: /photoprism/storage
      volumes:
        - name: photos-storage-originals
          persistentVolumeClaim:
            claimName: photos-pvc
        - name: photos-storage-import
          persistentVolumeClaim:
            claimName: photos-pvc
        - name: photos-storage-storage
          persistentVolumeClaim:
            claimName: photos-pvc
